# discord_bot_template

./: .pre-commit-config.yaml  README.md  bot.py  pyproject.toml
cogs/: general.py  greetings.py  steam.py
config/: __init__.py  environment.py  logconfig.py
helpers/: __init__.py  util.py
